--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </style>
   </head>
   <body>
-    <img src="Folderthebush/img/nen.jpg" width="1400"">
-    <h1><a href="Folderthebush/menu.html">Menu</a></h1> 
-    <h1><a href="Folderthebush/view.html">View</a></h1>
-    <h1><a href="Folderthebush/event.html">Event</a></h1>
+    <img src="thebush/img/nen.jpg" width="1400"">
+    <h1><a href="thebush/menu.html">Menu</a></h1> 
+    <h1><a href="thebush/view.html">View</a></h1>
+    <h1><a href="thebush/event.html">Event</a></h1>
   </body>
 </html>
