--- a/thebush/menu.html
+++ b/thebush/menu.html
@@ -34,7 +34,7 @@
     <div id="drinks">
     <h2>Drinks</h2>
     <h3>Cà phê Việt Nam</h3>
-        <img align="margin-left" src="Drinks/blackcoffee.jpg" width="150" height="auto"> 
+        <img align="margin-left" src="drinks/blackcoffee.jpg" width="150" height="auto"> 
         <h4>Cà phê đen đá</h4>
         <p>Đây là thứ thức uống có nguồn gốc từ phương Tây, 
           theo chân người Pháp du nhập vào Việt Nam từ thời thuộc địa.
@@ -43,14 +43,14 @@
             Dần sau đó dần trở thành thứ thức uống phổ biến 
             trong cuộc sống của người dân.</p>
       </html>
-      <img align="center" src="Drinks/milkcoffee.jpg" width="150" height="auto">
+      <img align="center" src="drinks/milkcoffee.jpg" width="150" height="auto">
         <h4>Cà phê sữa đá/nóng</h4>
         <p>Cà phê sữa đá hay còn gọi là nâu đá là thức uống đặc trưng của Việt Nam,
            đặc biệt tại <a href="https://vi.wikipedia.org/wiki/Sài_Gòn_(định_hướng)">Sài Gòn</a>. Thức uống này đã được thế giới công nhận
             là cách pha đặc trưng của Việt Nam với tên gọi tiếng Anh là
              Vietnamese Iced Coffee. </p>
       </br>
-      <img align="center" src="Drinks/bacsiu.jpg" width="150" height="auto">
+      <img align="center" src="drinks/bacsiu.jpg" width="150" height="auto">
         <h4>Bạc sỉu đá/nóng</h4>
         <p>Bạc xỉu - món đồ uống đặc trưng ở Sài Gòn.
            “Bạc xỉu” là gọi tắt của cụm từ “bạc tẩy xỉu phé” 
