--- a/thebush/menu.html
+++ b/thebush/menu.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="menu.css">
     <title>Menu The Bush coffee house</title>
-    <link rel="icon" href="img/thebushcf.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="img/thebushcf.png" type="image/x-icon"/>
 </head>
 <body>
   <div id="toppage">
