--- a/thebush/menu.html
+++ b/thebush/menu.html
@@ -26,7 +26,7 @@
     những đồ uống ngon được làm ra với tâm huyết của Đầu bếp và các Bartender.<br>
     Đến với The Bush Coffee bạn còn được phục vụ một cách tận tâm và 
     tận tình bởi những Bạn phục vụ của chúng tôi.</p>
-    <img src="https://scontent.fhan2-2.fna.fbcdn.net/v/t1.6435-9/212050884_2972131866386315_8857127222530765699_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=730e14&_nc_ohc=UE-ZGBoqFDcAX-OwQ6a&_nc_ht=scontent.fhan2-2.fna&oh=2a16a376233f369583d9c449afb2dcd9&oe=60F2914F" width="1200">
+    <img src="menufood.jpg" width="1200">
   
   </div>
 
