--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
     <title>The Bush coffee house</title>
     <style type="text/css">
         body {
+          background-image: url("thebush/br.jpg");
               background-color: rgb(255, 255, 255);
               font-family: sans-serif;
       }
+        .mucluc a{
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: center;
+          text-decoration: none;
+          font-size: 40px;
+          padding: 10px 0px 0px 10px;
+        }
     </style>
   </head>
   <body>
     <img src="thebush/img/nen.jpg" width="1400"">
-    <h1><a href="thebush/menu.html">Menu</a></h1> 
-    <h1><a href="thebush/view.html">View</a></h1>
-    <h1><a href="thebush/event.html">Event</a></h1>
+    <div class="mucluc">
+      <a href="thebush/menu.html">Menu (có 1 page)</a>
+      <a href="thebush/view.html">View (chưa có gì)</a>
+      <a href="thebush/event.html">Event (chưa có gì)</a>
+    </div>
   </body>
 </html>
